--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,27 +4,48 @@
     box-sizing: border-box;
 }
 
-div{
-    width: 100px;
-    height: 100px;
-    background-color: green;
-    border: 1px solid black;
+body{
+    display: flex;
 }
 
-.container{
-    width: 100%;
-    height: 300px;
-    background-color: red;
+.config{
+    width: 20%;
+    height: 100vh;
+    background-color: darkred;
 }
 
-div h1{
-    color: green;
+.conteudo{
+    width: 80%;
+    height: 100vh;
+    background-color: #2c2c2c;
+}
+#open{
+    width: 30px;
+    height: 30px;
+    margin: 20px;
+    background-image: url(../images/settings-glyph-black-icon-png_293809-removebg-preview\ \(1\).png);
+    background-size: cover;
+    cursor: pointer;
+    transition: filter 0.5s;
 }
 
-div > h1{
-    color: sienna;
+#open:hover{
+    filter: drop-shadow(0 0 10px #c4209b);
 }
 
-h1{
-    color: blue;
+.textC{
+    display: flex;/* e necessário para usar os debaixo */
+    align-items: center;/* alinha na vertical */
+    /*justify-content: center;/* alinha na horizontal */
+    /*pedding-top: vamos ver ;*/
+}
+
+.text-wraper{
+    color: whitesmoke;
+    width: 400px;
+    text-align: justify;
+}
+
+.text-wraper:nth-of-type(2){
+    display: none;
 }
